@@ -4,5 +4,5 @@ packages := xtc
 else
 packages := ipimb encoder pnCCD acqiris camera evr opal1k pulnix control xtc \
             epics bld princeton fccd cspad lusi app xamps ana index fexamp gsc16ai \
-            phasics
+            phasics timepix
 endif
