@@ -1,3 +1,4 @@
+2012-Jan-05	caf     		Added Timepix detector.
 2011-Nov-08	caf     Tag V03-00-01 	Modified some data types for portability.
 2011-Nov-02	caf     Tag V03-00-00.
 2011-Oct-03	caf     		Added Gsc16ai detector.
